--- a/libraries/dagster-delta/pyproject.toml
+++ b/libraries/dagster-delta/pyproject.toml
@@ -1,15 +1,14 @@
 [project]
 name = "dagster-delta"
-version = "0.5.5"
+version = "0.5.6"
 description = "Deltalake IO Managers for Dagster with pyarrow and Polars support."
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 dependencies = ["dagster>=1.8,<2.0", "deltalake>=1.0.0", "pendulum>=3.0.0"]
 authors = [{ name = "Ion Koutsouris" }]
 license-files = ["LICENSE", "licenses/elementl LICENSE"]
 classifiers = [
     "License :: OSI Approved :: Apache Software License",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
@@ -162,7 +161,7 @@ convention = "google"
 
 [dependency-groups]
 dev = [
-    "polars==1.31.0",
+    "polars>=1.37.0",
     "deltalake<=1.2.0",
     "pyarrow<=18.0.0",
     "pyright==1.1.393",
